// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleFileUpload renders custom class names 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-multiple-file-upload test"
    role="presentation"
    tabindex="0"
  >
    <input
      multiple=""
      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      tabindex="-1"
      type="file"
    />
    Foo
  </div>
</DocumentFragment>
`;

exports[`MultipleFileUpload renders with expected class names when horizontal 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-multiple-file-upload pf-m-horizontal"
    role="presentation"
    tabindex="0"
  >
    <input
      multiple=""
      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      tabindex="-1"
      type="file"
    />
    Foo
  </div>
</DocumentFragment>
`;

exports[`MultipleFileUpload renders with expected class names when not horizontal 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-multiple-file-upload"
    role="presentation"
    tabindex="0"
  >
    <input
      multiple=""
      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      tabindex="-1"
      type="file"
    />
    Foo
  </div>
</DocumentFragment>
`;
